# PandoraLauncherCrack

./: Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: constants.rs  serve_redirect.rs
crates/backend/: Cargo.toml
crates/backend/src/: account.rs  backend.rs  backend_filesystem.rs  backend_handler.rs  install_content.rs  instance.rs  launch.rs  launch_wrapper.rs  lib.rs  mod_metadata.rs  shortcut.rs  syncing.rs
crates/backend/src/metadata/: items.rs  manager.rs
crates/bridge/src/: install.rs  instance.rs  message.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: interface_config.rs  lib.rs  png_render_cache.rs  processor.rs  root.rs  ui.rs
crates/frontend/src/component/: content_list.rs  instance_list.rs  mod.rs  page_path.rs
crates/frontend/src/entity/: instance.rs  mod.rs
crates/frontend/src/modals/: generic.rs  mod.rs  modrinth_install.rs  modrinth_install_auto.rs  settings.rs
crates/frontend/src/pages/: instances_page.rs  modrinth_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  mods_subpage.rs  resource_packs_subpage.rs  settings_subpage.rs
crates/pandora_launcher/: Cargo.toml
crates/pandora_launcher/src/: main.rs  panic.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: http_client_tls.rs
crates/schema/src/: content.rs  instance.rs  loader.rs  modrinth.rs
package/flatpak/: com.moulberry.PandoraLauncher.desktop
scripts/: build_linux.sh  build_mac.sh  build_windows.sh
